--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/LabeledContentStyles.xaml
@@ -1,14 +1,17 @@
 ﻿<!--
 Velo City
 Copyright (C) 2022 Dust in the Wind
+
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
+
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
+
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
@@ -29,6 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         x:Key="{x:Type customControls:LabeledContent}"
         TargetType="{x:Type customControls:LabeledContent}">
 
+        <Setter Property="BetweenSpace" Value="20" />
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
@@ -41,7 +45,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
-                            <ColumnDefinition Width="20" />
+                            <ColumnDefinition Width="{TemplateBinding BetweenSpace}" />
                             <ColumnDefinition Width="*" SharedSizeGroup="ValueColumn" />
                         </Grid.ColumnDefinitions>
 
