--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/Icons/InfoIconStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/Icons/InfoIconStyles.xaml
@@ -23,24 +23,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
-        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/GenericIconStyles.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/GenericIconStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <Geometry x:Key="InfoIconGeometry">
+        M 256 0 C 115.04134 0 0 115.04133 0 256 C 0 396.95867 115.04134 512 256 512 C 396.95866 512 512 396.95867 512 256 C 512 115.04133 396.95866 0 256 0 z M 256 71.923828 C 358.08823 71.923828 440.07617 153.91176 440.07617 256 C 440.07617 358.08824 358.08823 440.07617 256 440.07617 C 153.91177 440.07617 71.923828 358.08824 71.923828 256 C 71.923828 153.91176 153.91177 71.923828 256 71.923828 z M 224 112 L 224 176 L 288 176 L 288 112 L 224 112 z M 224 208 L 224 400 L 288 400 L 288 208 L 224 208 z
+    </Geometry>
+
     <Style
-        x:Key="CloseIconStyle"
+        x:Key="InfoIconStyle"
         TargetType="{x:Type customControls:GenericIcon}"
-        BasedOn="{StaticResource GenericIconStyle}">
+        BasedOn="{StaticResource {x:Type customControls:GenericIcon}}">
 
-        <Setter Property="Foreground" Value="{StaticResource SuccessBrush}" />
-
-        <Setter Property="Geometry">
-            <Setter.Value>
-                <EllipseGeometry
-                    Center="128,128"
-                    RadiusX="128"
-                    RadiusY="128" />
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Foreground" Value="{StaticResource InfoBrush}" />
+        <Setter Property="Geometry" Value="{StaticResource InfoIconGeometry}" />
 
     </Style>
 
