--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoPointStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoPointStyles.xaml
@@ -19,11 +19,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
+    xmlns:behaviors="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Behaviors">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
-        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/InfoIconStyle.xaml" />
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/InfoIconStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="{x:Type customControls:InfoPoint}">
@@ -31,6 +32,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Width" Value="12" />
         <Setter Property="Height" Value="12" />
+        <Setter Property="IconStyle" Value="{StaticResource InfoIconStyle}" />
+        <Setter Property="IconGeometry" Value="{StaticResource InfoIconGeometry}" />
+        <Setter Property="IconForeground" Value="{StaticResource InfoBrush}" />
+        <Setter Property="IconBackground" Value="Transparent" />
 
         <Setter Property="Template">
             <Setter.Value>
@@ -45,34 +50,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                             <customControls:GenericIcon
                                 x:Name="GenericIcon1"
-                                Style="{StaticResource InfoIconStyle}"
+                                Geometry="{TemplateBinding IconGeometry}"
+                                Foreground="{TemplateBinding IconForeground}"
+                                Background="{TemplateBinding IconBackground}"
+                                Style="{TemplateBinding IconStyle}"
                                 Width="{TemplateBinding Width}"
                                 Height="{TemplateBinding Height}"
-                                IsTabStop="False"
-                                Cursor="Hand">
-
-                                <customControls:GenericIcon.Triggers>
-                                    <EventTrigger RoutedEvent="MouseDown">
-                                        <EventTrigger.Actions>
-                                            <BeginStoryboard>
-                                                <Storyboard>
-                                                    <BooleanAnimationUsingKeyFrames
-                                                        Storyboard.TargetName="Popup1"
-                                                        Storyboard.TargetProperty="IsOpen">
-
-                                                        <DiscreteBooleanKeyFrame KeyTime="0:0:0" Value="True" />
-                                                    </BooleanAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </BeginStoryboard>
-                                        </EventTrigger.Actions>
-                                    </EventTrigger>
-                                </customControls:GenericIcon.Triggers>
+                                Cursor="Hand"
+                                behaviors:PopupBehavior.Popup="{Binding ElementName=Popup1}">
 
                             </customControls:GenericIcon>
 
                             <Popup
                                 x:Name="Popup1"
-                                PlacementTarget="{Binding ElementName=GenericIcon1}"
                                 Placement="Top"
                                 AllowsTransparency="True"
                                 PopupAnimation="Fade"
