--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintCalendar/SprintCalendarView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintCalendar/SprintCalendarView.xaml
@@ -23,8 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
-    xmlns:converters1="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
     xmlns:sprintCalendar="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.SprintCalendar"
 
     mc:Ignorable="d"
@@ -39,18 +38,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/NotesBlockStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <converters1:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
-            <converters1:IntToGridLengthConverter x:Key="IntToGridLengthConverter" GridUnitType="Star" />
+            <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+            <converters:IntToGridLengthConverter x:Key="IntToGridLengthConverter" GridUnitType="Star" />
 
         </ResourceDictionary>
     </UserControl.Resources>
 
     <DockPanel>
-
-        <customControls:NotesBlock
-            DockPanel.Dock="Bottom"
-            ItemsSource="{Binding Notes}"
-            Margin="0 20 0 0" />
 
         <DataGrid
             ItemsSource="{Binding CalendarItems}"
@@ -97,7 +91,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding HasWorkHours}" Value="True">
-                                    <Setter Property="Foreground" Value="LimeGreen" />
+                                    <Setter Property="Foreground" Value="{StaticResource SuccessBrush}" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
@@ -122,7 +116,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                                 <Border
                                     Grid.Column="0"
-                                    Background="LimeGreen"
+                                    Background="{StaticResource SuccessBrush}"
                                     Height="3" />
 
                                 <Border
